--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1957,7 +1957,7 @@ pre code {
   border: 0;
 }
 
-.form-control {
+.form-control, .form-select {
   display: block;
   width: 100%;
   height: calc(1.6em + 0.75rem + 2px);
@@ -1973,7 +1973,7 @@ pre code {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
-  .form-control {
+  .form-control , .form-select {
     transition: none;
   }
 }
@@ -1981,18 +1981,18 @@ pre code {
   background-color: transparent;
   border: 0;
 }
-.form-control:focus {
+.form-control:focus , .form-select:focus {
   color: #495057;
   background-color: #fff;
   border-color: #a1cbef;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(52, 144, 220, 0.25);
 }
-.form-control::-moz-placeholder {
+.form-control::-moz-placeholder , .form-select::-moz-placeholder  {
   color: #6c757d;
   opacity: 1;
 }
-.form-control:-ms-input-placeholder {
+.form-control:-ms-input-placeholder , .form-select:-ms-input-placeholder  {
   color: #6c757d;
   opacity: 1;
 }
@@ -2051,7 +2051,7 @@ select.form-control:focus::-ms-value {
   line-height: 1.5;
 }
 
-.form-control-plaintext {
+.form-control-plaintext , .form-select-plaintext {
   display: block;
   width: 100%;
   padding: 0.375rem 0;
